--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: just-the-docs
 title: [Krestfield Documentation]
 description: [All product guides and documents]
