--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
 title: [Krestfield Documentation]
 description: [All product guides and documents]
