--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 remote_theme: pmarsceill/just-the-docs
 title: [Krestfield Documentation]
 description: [All product guides and documents]
+---
+layout: default
+title: Customization
+nav_order: 4
+---
