--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pmarsceill/just-the-docs
-title: [Krestfield Documentation]
+title: [Krestfield Knowledge]
 description: [All product guides and documents]
+
+ezcert:
+    permalink: "/:ezcert/:path/"
+
