--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pmarsceill/just-the-docs
 title: [Krestfield Knowledge]
 description: [All product guides and documents]
+color_scheme: krestfield
