--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ remote_theme: krestfield/just-the-docs
 title: [Krestfield Knowledge]
 description: [All product guides and documents]
 color_scheme: krestfield
+logo: "/assets/images/krestfield.png"
